Fixed some overflow errors pn mobiles - media

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -154,6 +154,7 @@ a {
   position: relative;
   bottom: 8px;
   left: -35px;
+  cursor: pointer;
 }
 #search-input-Desktop{
    padding: 10px 7px;
@@ -395,6 +396,7 @@ a {
     border-bottom: 0;
     border-left: 2px solid var(--clr-white-main);
     transform: translateX(15px);
+    background: transparent;
   }
   .nav-links ul li a{
     font-size: 18px;
@@ -406,10 +408,10 @@ a {
   }
   #search-input-media{
     padding: 10px 7px;
-    width: 200px;
+    width: 120px;
     position: relative;
     bottom: 5px;
-    left: -45px;
+    left: -85px;
     border: none;
     outline: none;
     border-radius: 5px;
@@ -418,8 +420,9 @@ a {
   #glass-media{
     position: relative;
     /* left: -55px; */
-    right: 70px;
-    bottom: 7px;
+    right: 110px;
+    bottom: 5px;
+    cursor: pointer;
   }
   .drops {
     position: relative;
@@ -541,7 +544,7 @@ a {
   }
   #search-input-media{
     padding: 10px 7px;
-    width: 200px;
+    width: 150px;
     position: relative;
     bottom: 5px;
     left: -45px;
